Ukázka výběru barev

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       </div>
     </header>
     <div class="product container">
+      <p>Vyberte si barvu produktu</p>
+      <div class="choose-colors">
+      <div class="color-option">
+      <div class="color-option__box"></div>
+      <p class="color-option__name">bílá</p>
+      </div>
+      </div>
       <svg
         id="product-image"
         class="product__image t-shirt"
