Stylování + přidání tlačítka

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <p class="color__name">bílá</p>
           </div>
         </div>
+        <button class="product__order">Objednat</button>
       </div>
     </div>
   </body>
