--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div>
-      <button class="product__order">Objednat</button>
+      <button class="product__order" id="product__order">Objednat</button>
     </div>
   </body>
 </html>
